Fix text spacing issue

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,8 +14,6 @@ span {
 p {
   color: var(--text);
   font-size: 1.5rem;
-  width: 80%;
-  margin: 20px auto;
   text-align: center;
 }
 
